--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -9,6 +9,7 @@
     "com.unity.inputsystem": "1.6.3",
     "com.unity.nuget.newtonsoft-json": "3.0.1",
     "com.unity.render-pipelines.universal": "14.0.8",
+    "com.unity.services.authentication": "3.3.3",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.5",
