--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -7,6 +7,7 @@
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.inputsystem": "1.6.3",
+    "com.unity.mobile.android-logcat": "1.3.2",
     "com.unity.nuget.newtonsoft-json": "3.0.1",
     "com.unity.render-pipelines.universal": "14.0.8",
     "com.unity.services.authentication": "3.3.3",
